* fixed z-index of dashboard.  * fixed height of fullscreen window.
git-svn-id: file:///tmp/ranzhi/trunk@1094 cb094fd3-5a31-0410-bd9d-ef5a9cbf4261

--- a/ranzhi/app/sys/block/css/dashboard.css
+++ b/ranzhi/app/sys/block/css/dashboard.css
@@ -2,7 +2,7 @@ body {background: #145ccd;}
 
 .page-content {margin-top: -19px; border-top: 1px solid #3280fc;}
 
-.dashboard {position: relative; padding-top: 25px; z-index: 1040}
+.dashboard {position: relative; padding-top: 25px; z-index: 940}
 .dashboard .row {margin: 0 auto;}
 .dashboard .panel-actions {margin-top: 0; margin-right: 0;}
 .dashboard-actions {position: absolute; top: -34px; right: 80px}
